--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "NowPayments": {
+    "BaseUrl": "https://api-sandbox.nowpayments.io/v1",
+    "ApiKey": "CHANGE_ME",
+    "IpnSecret": "CHANGE_ME",
+    "IpnPublicUrl": "https://localhost:5001/webhooks/nowpayments"
+  },
   "DATABASE_URL": "postgresql://neondb_owner:npg_GUsg3kb1TVQC@ep-gentle-rice-ab7zerft-pooler.eu-west-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require",
   "Logging": {
     "LogLevel": {
